<resources>
    <string name="app_name">زاد المهاجر</string>
    <string name="jam3iyat">الجمعيات</string>
    <string name="entertai">الركن الترفيهي</string>
    <string name="instructions">تعليمات الاستخدام</string>
    <string name="about">عن التطبيق</string>
    <string name="item_Home">الرئيسيه</string>
    <string name="item_Myorders">طلباتي</string>
    <string name="item_contact">تواصل معنا</string>
    <string name="item_MyInfo">معلوماتي</string>
    <string name="item_Notif">الاشعارات</string>
    <string name="txt_terms">قرأت الشروط والاحكام</string>
    <string name="callfriends">شارك التطبيق مع الأصدقاء</string>
    <string name="sgnout">تسجيل الخروج</string>
    <string name="register">تسجيل</string>
    <string name="txt_login">تسجيل الدخول</string>
    <string name="messagesucess">تم تسجيلك بنجاح </string>
    <string name="arbic">عربي</string>
    <string name="card">سلة المشتريات</string>
    <string name="english">English</string>
    <string name="txt_phone">الجوال </string>
    <string name="txt_phoneHome">الجوال</string>
    <string name="txt_email">الايميل </string>
    <string name="text_password">كلمة المرور </string>
    <string name="text_forgetpass">نسيت كلمة المرور </string>
    <string name="text_remeberme"> تذكرني دائماً </string>
    <string name="text_signin">دخول</string>
    <string name="text_register">إنشاء حساب جديد   </string>
    <string name="validation_mobile">ادخل رقم جوال صالح </string>
    <string name="nonEmpty">ادخل المطلوب</string>
    <string name="validation_number_length">ادخل الباسورد حد اقل 4 حروف </string>
    <string name="text_retype_password">إعادة كتابة كلمة المرور </string>
    <string name="error_happen">حدث خطأ من فضللك حاول مرة اخري </string>
    <string name="authontiation">انتهت صلاحية دخوللك للتطبيق ادخل اسم المستخدم وكلمة السر مرة اخري </string>
    <string name="servererror">حدث خطأ بالخادم اتصل  بالادارة</string>
    <string name="networkerror">حدث خطأ بالاتصال بالانترنت تأكد من وجود انترنت </string>
    <string name="decription">يرجى ملء جميع الحقول الوصف</string>
    <string name="serviceerror">يرجى اختيار على الأقل خدمة واحدة</string>
    <string name="timeouterror"> وقت ارسال البيانات اكث من المعتاداتصال الانترنت بطيئ</string>
    <string name="usernameandpassword">من فضللك تأكد من اسم المستخدم وكلمة السر </string>
    <string name="selectTime">حدد الوقت</string>
    <string name="text_fname">الاسم</string>
    <string name="txt_next">متابعة</string>
    <string name="txt_validate">تفعيل</string>
    <string name="txt_msg">فضلا أدخل كود التفعيل</string>
    <string name="txt_code"> كود التفعيل</string>
    <string name="item_create_account">انشاء حساب</string>
    <string name="validation_valid_password">ادخل كلمة سر تحتوي علي 8 خانات </string>
    <string name="congratulation">تهانينا</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_change_pwd">تغيير كلمة المرور</string>
    <string name="txt_back">تراجع</string>
    <string name="txt_save">حفظ</string>
    <string name="validate">تأكيد</string>
    <string name="tab_urgorder">قيد الإنتظار</string>
    <string name="tab_normlorder">تحت التنفيذ</string>
    <string name="tab_lastorder">تمت</string>
    <string name="txt_send">ارسال</string>
    <string name="txt_title_msg"> عنوان الرسالة ...</string>
    <string name="txt__msg">نص الرسالة ...</string>
    <string name="txt_adr_gov">صورة لوحة البلدية</string>
    <string name="txt_nul_sachi"> صورة رقم صاشي</string>
    <string name="txt_order_detail">تفاصيل الطلب</string>
    <string name="txt_adr_num">رقم المنزل الشارع المنطقة</string>
    <string name="txt_last_order">طلب لاحق</string>
    <string name="ryal">  ريال </string>
    <string name="txt_current_order">طلب حالي</string>
    <string name="add_cart">أضف إلى السلة</string>
    <string name="normal">عادي</string>
    <string name="urgent">مستعجل</string>
    <string name="txt_order_now">أطلب الان</string>
    <string name="txt_order_desc">وصف الطلب</string>
    <string name="txt_hello"> مرحبا بك ...</string>
    <string name="txtDate">  قم بتحديد اليوم</string>
    <string name="txtTime"> قم بتحديد الوقت</string>
    <string name="abotuTax">•	التطبيق  تفاعلي ديناميكي يقدم خدمات توصيل للشركات والمؤسسات والصيدليات والبقالات وغيره من الخدمات     وقابل للتحديث  .. وسيتم تصميم وبرمجة التطبيق  باستخدام أفضل التقنيات الحديثة </string>
    <string name="lien_msg">قم بنسخ هذا الرابط وإرساله إلى أصدقائك لتسجيل عبر هذا الرابط</string>
    <string name="txt_share">شارك</string>
    <string name="txt_copier">نسخ</string>
    <string name="lien_share">رابط التحميل</string>
    <string name="messagespinner">من فضللك تأكد من  اختيارك المدينه </string>
    <string name="Vlaid_match_password">كلمةالسر غير متطابقه</string>
    <string name="requestNumber"> طلب رقم</string>
    <string name="requestMsg"> جاري تنفيذ الطلب الان</string>
    <string name="requestPendingMsg">في إنتظار تواصل الفني</string>
    <string name="ok"> حسناً</string>
    <string name="rewuestNO"><![CDATA[<p style="text-align:justify;">تم ارسال  طلبك بنجاح <br/> #%1$s  <br/> سيقوم فريق الفنيين بالاتصال بك <p>]]></string>
    <string name="rewuesttxt">سيقوم فريق الفنيين بالاتصال بك </string>
    <string name="cancelOrder">الغاء الطلب</string>
    <string name="orderWaiting"> في إنتظار القبول</string>
    <string name="txt_confirm_cancel"> هل أنت متأكد أنك تريد إلغاء هذاالطلب؟ </string>
    <string name="ordercanceled">الغاء الطلب</string>
    <string name="ordercanceledmessage">قد تم إلغاء طلبك رقم  </string>
    <string name="txt_okrequest">تم الإستلام</string>
    <string name="orderstate">طلب حالي %1$s رقم </string>
    <string name="error_incorrect_password">كلمة السر غير صحيحه</string>
    <string name="invalidePhoneNumber">رقم الهاتف غير صحيح </string>
    <string name="invalideEmail">الايميل غير صحيح </string>
    <string name="txt_loading">تحميل...</string>
    <string name="confirmOrder">تم قبول الطلب</string>
    <string name="callCustomer">  الاتصال بالسائق</string>
    <string name="accept">  قبول الطلب</string>
    <string name="txt_loading_position">تحديد الموقع...</string>
    <string name="txtDone"> تم تنفيذ طلبك رقم %1$s </string>
    <string name="txtRaiting">فضلا قم بتقييم الفني </string>
    <string name="remarks">ملاحظات ...</string>
    <string name="followMsg">تتبع الفني</string>
    <string name="order_price">سعر الطلب   :</string>
    <string name="deliver_price">سعر التوصيل   :</string>
    <string name="finish_order">إتمام الطلب</string>
    <string name="total_price">إجمالي المبلغ</string>
    <string name="text_forgot_password">سيتم إرسال كلمة المرور لهاتفك عن طريق الإرساليات القصيرة</string>
    <string name="hello_blank_fragment">مرحبا جزء فارغ</string>
    <string name="send_request">إرسال الطلب</string>
    <string name="map_msg">فضلاً قم بتحديد موقعك لتوصيل الطلب </string>
    <string name="accept_order">تم قبول طلبك</string>
    <string name="from_provider">من مزود الخدمة</string>
    <string name="delete_order"> تم حذف الطلب في</string>
    <string name="success_delete_order"> تم حذف طلبك بنجاح</string>
    <string name="time">الوقت</string>
    <string name="now_orders">طلباتي الحالية</string>
    <string name="last_orders">طلباتي اللاحقة</string>
    <string name="participate">شارك في السحب</string>
    <string name="participate_question">هل تود الإشتراك في السحب</string>
    <string name="participate_ques">على الجائزة الشهرية</string>
    <string name="accept_">موافق</string>
    <string name="refuse">غير موافق</string>
    <string name="error_field_required">هذه الخانة اجبارية </string>
    <string name="text_code">رمز</string>
    <string name="send_success">تم إرسال طلبك</string>
    <string name="send_success_">سيتم اعلامك فور قبول مقدم الخدمة</string>
    <string name="text_id_number">رقم الهوية</string>
    <string name="txt_msg_cart">لا يوجد شيء في السلة</string>
    <string name="no_notif">لا يوجد لديك أي اشعارات</string>
    <string name="txt_search_keyword">كلمات البحث</string>
    <string name="txt__orders">فضلاً قم بكتابة الطلبات</string>
    <string name="loading">جار التحميل. أرجو الإنتظار...</string>
    <string name="profile">الملف الشخصي</string>
    <string name="search_txt">بحث</string>
    <string name="error_password_match">كلمة المرور غير متطابقة</string>
    <string name="association">جمعية</string>
    <string name="benefis">مستفيد</string>
    <string name="name_benefis">إسم المستفيد</string>
    <string name="name_association">إسم الجمعية</string>
    <string name="city">المدينة</string>
    <string name="validation_msg">سيتم إرسال رابط التفعيل عبر حساب البريد الإلكتروني</string>
    <string name="registerToASsos">إشترك في الجمعية</string>
    <string name="text_description">نص الرسالة</string>
    <string name="Tab3_inquire">استفسار</string>
    <string name="Tab2_suggest">اقتراح</string>
    <string name="Tab1_complain">شكوي</string>
    <string name="txt_add_subject">إضافة الموضوع</string>
    <string name="txt_subject_name">عنوان الموضوع</string>
    <string name="txt_subject_details">تفاصيل الموضوع</string>
    <string name="txt_youtube_link">رابط اليوتوب لعرض الفيديو</string>
    <string name="txt_add_photo">إضافة الصورة</string>
    <string name="item_add_users">طلبات الإنضمام</string>
    <string name="item_active_requests">طلبات مفعلة</string>
    <string name="item_nonactive_requests">طلبات غير مفعلة</string>
    <string name="item_benefic_requests">طلبات المستفيدين</string>
    <string name="delete">حذف</string>
    <string name="modify">تعديل</string>
    <string name="activate">تفعيل</string>
    <string name="txt_photo_name">إسم الصورة</string>
    <string name="txt_terms_cond">الشروط والاحكام</string>
    <string name="txt_added_association">الجمعيات المشترك بها</string>
    <string name="txt_all_association">الرئيسية-الجمعيات</string>
    <string name="about_ass">عن الجمعية</string>
    <string name="beneficiaries">المستفيدين</string>
    <string name="msg_not_available">معلومات غير متاحة حالياً</string>
    <string name="news_ass">أخبار الجمعية</string>
    <string name="audios">صوتيات</string>
    <string name="videos">مرئيات</string>
    <string name="songs">اناشيد</string>
    <string name="download">تحميل المادة</string>
    <string name="txt_share_">مشاركة</string>
    <string name="txt_association_collab">إشترك في الجمعية</string>

    <string-array name="social_status">
        <item>متزوج </item>
        <item>أعزب</item>
        <item>مطلق</item>
    </string-array>
    <string-array name="account">
        <item>جمعية </item>
        <item>مستفيد</item>
    </string-array>

</resources>
