<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/full_round_rect_shape_white"

    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="12dp"
        android:src="@mipmap/ok"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulation"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/messagesucess"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        android:text="@string/validation_msg"
        android:textColor="@android:color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="22dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:background="@drawable/round_darkgreen_rect_shape"

            android:id="@+id/btn_accept"/>




</LinearLayout>