<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.art4muslim.zedalmouhajer.fragments.AddSubjectFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"

        android:gravity="center"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:hint="@string/txt_subject_name"
            android:background="@drawable/round_rect_shape"
            android:inputType="text"
            android:id="@+id/edt_name"
            android:layout_marginBottom="11dp"  />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:gravity="top"
            android:hint="@string/txt_subject_details"
            android:background="@drawable/round_rect_shape"
            android:inputType="textMultiLine"
            android:id="@+id/edt_text"
            android:layout_marginBottom="11dp"  />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_video_link"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:hint="@string/txt_youtube_link"
            android:background="@drawable/round_rect_shape"
            android:layout_marginBottom="10dp"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edt_photo_name"
                android:enabled="false"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:hint="@string/txt_photo_name"
                android:background="@drawable/round_rect_shape"
                android:layout_marginBottom="10dp"
                android:inputType="phone" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/txt_add_photo"

                android:background="@drawable/round_green_rect_shape"
                android:id="@+id/btnAddPhoto"/>
        </LinearLayout>




        <Button
            android:text="@string/txt_add_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send"
            android:textColor="@android:color/white"
            android:background="@drawable/round_darkgreen_rect_shape"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorAccent" />

</RelativeLayout>
