<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_choose_language"
    android:background="@color/colorBg"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    android:layout_height="match_parent">
    <!--include
        layout="@layout/toolbar_top"
        android:layout_width="match_parent"

        android:id="@+id/include2"
        android:layout_height="match_parent" /-->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorAccent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"


            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"

                android:layout_marginBottom="20dp">

                <View
                    android:layout_width="5dp"
                    android:layout_height="20dp"
                    android:background="@color/colorAccent"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/registerToASsos"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"

                    />
            </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_name_benfis"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:hint="@string/name_benefis"
                android:background="@drawable/round_rect_shape"
                android:layout_marginBottom="10dp"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:hint="@string/txt_phone"
                android:background="@drawable/round_rect_shape"
                android:inputType="phone"
                android:id="@+id/edt_phone"
                android:layout_marginBottom="11dp"  />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:background="@drawable/round_rect_shape"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingBottom="14dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="14dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:hint="@string/text_id_number"
                android:background="@drawable/round_rect_shape"
                android:inputType="number"
                android:id="@+id/edt_id_number"
                android:layout_marginBottom="11dp"  />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:hint="@string/city"
                android:entries="@array/social_status"
                android:background="@drawable/round_rect_shape"
                android:inputType="text"
                android:id="@+id/spinnerStatus"
                android:layout_marginBottom="11dp"  />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                >


            </RelativeLayout>



            <Button
                android:text="@string/txt_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:background="@drawable/round_darkgreen_rect_shape"
                android:id="@+id/btn_send" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
